cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_124.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_ecb.c:29: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_ecb.c:29:5: Write of unused value
27.       c2l(in, l);
28.       d[0] = l;
29.       c2l(in, l);
          ^
30.       d[1] = l;
31.       if (encrypt)
